<resources>
    <string name="app_name">QR Tool</string>
    <string name="scanner">Scanner</string>
    <string name="generator">Generator</string>
    <string name="image_scanner">Image Scanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="developer">Developed by thuhtooaung</string>
    <string name="sd">Product of Enorsus Software Development</string>
    <string name="copyright_title">Copy Right and attribution</string>
    <string name="copyright_body">Zxing Barcode Library Form Journeyapps\nLauncher Icon made by Pixel perfect from www.flaticon.com and modified by thuhtooaung.\nOther icons,designs and resources are owned by thuhtooaung.</string>
    <string name="fb_page">Page</string>
    <string name="website">Website</string>
    <string name="profile">Profile</string>
    <string name="pp_title">Privacy and Policy</string>
    <string name="pp_body">Absolutely Free and Open Source Android Application\nNo ads and Light Weight Application\nNo tracking, No data collecting and Secure Application\nWe are recommended to download the app from authorized source or Google Play Store.\nDeveloper will not be responsible for any demage and unwanted conditions.\nEverybody can use this application without restriction.\nAvoid distribution by cloning the application and selling this application to others.\nThis application is only for personal use.\nYou are already agreed this privacy-policy and agreement.\n(I agreed all of the above).</string>
    <string name="thank">Thank For Using This Application\n© Copyright</string>
    <string name="get_app_scan">Scan the QR Code to get the app&#8230;</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date:</string>
    <string name="cal_default">25/12/1998</string>
    <string name="cal_default_hr">6:30</string>
    <string name="end_date">End Date:</string>
    <string name="name">Name</string>
    <string name="organization">Organization</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="notes">Notes</string>
    <string name="enter_email">Enter Email Address to send</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_em_bd">Enter body message</string>
    <string name="loc_name">Location Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_msg">Enter your message</string>
    <string name="play_store_prefix">market://details?id=</string>
    <string name="generate">Generate</string>
    <string name="enter_text">Enter text to decode</string>
    <string name="enter_wifi_name">Enter Wifi Name</string>
    <string name="enter_wifi_password">Enter Wifi Password</string>
    <string name="save_image">Save Image</string>
    <string name="enter_image_name">Enter Image Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="scan_image">Scan Image</string>
    <string name="raw_data">Raw Data:</string>
    <string name="copy_raw_data">Copy Raw Data:</string>
    <string name="url_prefix">https://</string>
    <string name="dial">Dial</string>
    <string name="connect">Connect</string>
    <string name="go">Go</string>
    <string name="send_email">Send Mail</string>
    <string name="send_sms">Send SMS</string>
    <string name="go_to_map">Go to Map</string>
    <string name="go_to_market">Go to Market</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_calendar_event">Add Calendar Event</string>
    <string name="copy">Copy</string>
</resources>