<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Calendar_Event_Fragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/cal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:background="@drawable/edit_text_bg"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:autofillHints="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/cal_pick_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cal_default"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/round_img_btn_bg"
            android:gravity="center"/>
        <TextView
            android:id="@+id/cal_pick_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cal_default_hr"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_img_btn_bg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/cal_pick_date_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cal_default"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_img_btn_bg"/>
        <TextView
            android:id="@+id/cal_pick_time_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cal_default_hr"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_img_btn_bg"/>
    </LinearLayout>

    <Button
        android:id="@+id/cal_qr_gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/generate"
        android:background="@drawable/gen_btn_bg"
        android:layout_margin="10dp"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/rs_img_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/cal_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_downward_black_24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_img_btn_bg"
        android:visibility="invisible"
        android:contentDescription="@string/app_name"
        android:layout_margin="10dp"/>

</LinearLayout>