<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/custom_ad_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_image"
        android:layout_margin="25dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/img_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_image_name"
        android:layout_margin="10dp"
        android:background="@drawable/get_img_name_edi"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:autofillHints="@string/enter_image_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/get_img_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_bg"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/get_img_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_bg"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>