<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Wifi_Fragment"
    android:orientation="vertical"
    android:id="@+id/ll_wifi">

   <EditText
        android:id="@+id/wifi_ss_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_wifi_name"
        android:background="@drawable/edit_text_bg"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
       android:autofillHints="@string/enter_wifi_name" />

    <EditText
        android:id="@+id/wifi_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_wifi_password"
        android:background="@drawable/edit_text_bg"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="textVisiblePassword"
        android:autofillHints="@string/enter_wifi_password" />
    <Button
        android:id="@+id/wifi_qr_gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:background="@drawable/gen_btn_bg"
        android:layout_margin="10dp"
        android:textSize="12sp"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/rs_img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/wifi_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_downward_black_24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_img_btn_bg"
        android:visibility="invisible"
        android:contentDescription="@string/app_name"
        android:layout_margin="10dp"/>
</LinearLayout>